CUI-1248: Tour: visual issues (button margin, text overflow, text padding)
* Forced margin under section > p to overwrite any possible style.

--- a/legacy/components/styles/tour.less
+++ b/legacy/components/styles/tour.less
@@ -87,6 +87,7 @@ Class: .tour
       >p {
         .light-text;
         font-size: 18*@px;
+        margin: 0 8*@px;
       }
     }
 
